[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://art/background.png" type="Texture" id=2]
[ext_resource path="res://Disc.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]

[node name="Main" type="Node"]
script = ExtResource( 4 )
Disc = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 73, 21.5 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 160, 200 )

[node name="Background" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 2 )
centered = false

[node name="DiscPosition" type="Position2D" parent="."]
position = Vector2( 160, 160 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Discs" type="Node" parent="."]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
